@@ -1105,16 +1105,18 @@ static void
 handle_sigcont (int signalnum)
 {
   int old_errno = errno;
+  pid_t pgrp = getpgrp ();
+  pid_t tcpgrp = tcgetpgrp (1);
 
-  if (tcgetpgrp (1) == getpgrp ())
+  if (tcpgrp == pgrp)
     {
       /* We are in the foreground.  */
       send_to_emacs (emacs_socket, "-resume \n");
     }
-  else if (tty)
+  else if (0 <= tcpgrp && tty)
     {
       /* We are in the background; cancel the continue.  */
-      raise (SIGSTOP);
+      kill (-pgrp, SIGTTIN);
     }
 
   signal (signalnum, handle_sigcont);
@@ -1552,6 +1554,14 @@ main (int argc, char **argv)
 	       "Try `%s --help' for more information\n",
 	       progname, progname);
       exit (EXIT_FAILURE);
+    }
+
+  if (tty)
+    {
+      pid_t pgrp = getpgrp ();
+      pid_t tcpgrp = tcgetpgrp (1);
+      if (0 <= tcpgrp && tcpgrp != pgrp)
+	kill (-pgrp, SIGTTIN);
     }
 
   /* If alternate_editor is the empty string, start the emacs daemon
